<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveDroid</string>
    
    <string name="wall">Wall</string>
    <string name="List">List</string>
    <string name="Avatar">Avatar</string>
    <string name="carousel">Carousel</string>
    <string name="Trophies">Trophies</string>
    <string name="set_wallpaper">Set as wallpaper</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="loading">loading...</string>
    <string name="enter">Please enter your GamerTag</string>
    <string name="gamertag">GamerTag</string>
    <string name="settings">Settings</string>
    <string name="connection">Login</string>
	<string name="license">License</string>
	<string name="completed">Completed</string>  
	<string name="almostcompleted">Almost Completed</string>  
	<string name="morethan">More than 75%</string>  
	<string name="xboxapititle">This app uses http://xboxapi.com/</string>
	<string name="xboxapisubtitle">Thanks to @djekl</string>
	<string name="fork">Fork LiveDroid on Github</string>
	<string name="Guide">Guide</string>
	<string-array name="types">
        <item>All</item>
        <item>Retails</item>
        <item>Arcade</item>
    </string-array>
    <string-array name="typesach">
        <item>All</item>
        <item>Won</item>
        <item>Missing</item>
    </string-array>
        <string name="login">login</string>
        <string name="no_games">No games</string>
        <string name="refresh">Refresh</string>
        <string name="restart">Restarting application</string>
        <string name="api_error">Error, please try again later...</string>
        <string name="credits">Credits</string>
        <string name="credits_oss_heading">LiveDroid uses the following open-source software:</string>
    	<string name="credits_oss_items"><a href="http://code.google.com/p/android-query/">android-query</a>\nCopyright 2012 Peter Liu.\n<a href="http://loopj.com/android-async-http/">android-async-http</a>\nCopyright 2012 James Smith.\n<a href="http://actionbarsherlock.com/">ActionBarSherlock</a>\nCopyright 2012 Jake Wharton.\n<a href="https://code.google.com/p/google-gson/">Google GSON</a>\nCopyright 2008-2011 Google Inc.\n</string>
    	<string name="credits_art_items">This app uses <a href="http://xboxapi.com/">http://xboxapi.com/</a>.\nThanks to <a href="http://twitter.com/djekl">@djekl</a>.</string>
    	<string name="credits_app_copyright">Copyright 2013, Victor Vieux.</string>
    	<string name="search_hint">Search game</string>
    	<string name="wallpaper_updated">Wallpaper updated</string>
    	<string name="wallpaper_error">Error updating the Wallpaper</string>
    	<string name="hidden">Achievement hidden</string>
    	<string name="hidden_desc">This achievement is hidden</string>
    					
</resources>