<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Fountain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whiten" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" android:paddingTop="100dp" android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/xboxlogo" android:layout_marginBottom="50dp"/>

        <ViewSwitcher
            android:id="@+id/viewSwitcherLogin"
            android:layout_width="wrap_content"
            android:layout_height="50dp" android:inAnimation="@android:anim/fade_in" android:outAnimation="@android:anim/fade_out">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/editTextGamerTag"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/block"
                    android:hint="@string/gamertag"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp" android:textSize="14sp" android:gravity="center"/>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/block_x360a"
                    android:text="@string/connection"
                    android:textColor="@color/xbox_green" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewLoading"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/block"
                android:padding="4dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/loading"
                android:textColor="@color/xbox_green"
                android:textStyle="italic" />
        </ViewSwitcher>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/block"
        android:paddingBottom="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/xbox_green"
        android:textSize="40sp"
        android:textStyle="bold" />

</RelativeLayout>